--- a/package.json
+++ b/package.json
@@ -18,5 +18,7 @@
   "bugs": {
     "url": "https://github.com/WilliamDann/dnd_econ/issues"
   },
-  "homepage": "https://github.com/WilliamDann/dnd_econ#readme"
+  "homepage": "https://github.com/WilliamDann/dnd_econ#readme",
+  "dependencies": {
+  }
 }
